# module-git-secret-protector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-generate-release.yml  create_major_release.yml  create_minor_release.yml  create_patch_release.yml  create_release.yml  publish-to-pypi.yml  pull_request.yml  release.yml
docs/: RELEASE.md
docs/plans/cli-output-controls/: 2026-06-22-cli-output-controls-plan.md
docs/plans/encryption-versioning/: 2026-06-22-scheme-versioning-plan.md
docs/specs/cli-output-controls/: 2026-06-22-cli-output-controls-design.md
docs/specs/encryption-versioning/: 2026-06-22-scheme-versioning-design.md
docs/specs/guardrails-onboarding/: 2026-06-11-guardrails-onboarding-design.md
examples/basic-usage/: .gitattributes  README.md  config.ini
examples/basic-usage/secrets/: secret.txt
hooks/: boto3.py
src/: test_aes.py
src/git_secret_protector/: aes_encryption_handler.py  aes_key_manager.py  encryption_manager.py  git_attributes_parser.py  git_hooks_installer.py  key_rotator.py  kms_key_manager.py  logging.py  main.py  settings.py
src/git_secret_protector/context/: module.py
src/git_secret_protector/core/: git_attributes_parser.py  output.py  settings.py
src/git_secret_protector/crypto/: aes_encryption_handler.py  aes_key_manager.py
src/git_secret_protector/error/: aes_key_error.py  storage_error.py
src/git_secret_protector/services/: __init__.py  encryption_manager.py  key_rotator.py
src/git_secret_protector/storage/: aws_ssm_storage_manager.py  gcp_secret_storage_manager.py  storage_manager_factory.py  storage_manager_interface.py
src/git_secret_protector/utils/: configure_logging.py  (+1 more)
src/utils/: update_project_version.py
tests/integration/: test_encrypt_decrypt_integration.py  test_encrypt_decrypt_integration_with_aws_ssm.py  test_encrypt_decrypt_integration_with_gcp_secret.py
tests/unit/: test_aes_encryption_handler.py  test_aes_key_manager.py  test_aws_ssm_storage_manager.py  test_configure_logging.py  test_encryption_manager.py  test_git_attributes_parser.py  test_key_rotator.py  test_kms_key_manager.py  test_lazy_imports.py  test_main_cli.py  test_output.py  test_settings.py
tests/utils/: random_utils.py
tools/: create_release.sh
