[tool.poetry]
name = "git-secret-protector"
version = "1.5.1"
description = "A tool for managing secrets in Git with AWS Parameter Store integration."
authors = ["Duc Duong <duc.duong@c0x12c.com>"]
readme = "README.md"
packages = [{ include = "git_secret_protector", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.43.27"
pycryptodome = "^3.23.0"
google-cloud-secret-manager = "^2.29.0"
injector = "^0.24.0"
google-auth = "^2.53.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mock = "^5.1.0"
pyinstaller = "^6.20.0"
tomlkit = "^0.15.0"

[tool.poetry.scripts]
git-secret-protector = "git_secret_protector.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
